[gd_scene load_steps=6 format=3 uid="uid://7a5ccyec5dip"]

[ext_resource type="Script" path="res://scripts/Menu.gd" id="1_elkt3"]
[ext_resource type="Texture2D" uid="uid://7s7hnrjydrri" path="res://assets/free-city-backgrounds-pixel-art/city 4/8.png" id="2_j4jo2"]
[ext_resource type="Texture2D" uid="uid://dleqrlplx4kd5" path="res://assets/Glacial-mountains-parallax-background_vnitti/background_glacial_mountains.png" id="3_gapmd"]
[ext_resource type="Texture2D" uid="uid://dqne4lx7k1vo2" path="res://assets/Free Pixel Art Forest/Free Pixel Art Forest/Preview/Background.png" id="4_npdpw"]
[ext_resource type="Texture2D" uid="uid://d1veor87s8m0" path="res://assets/Player.PNG" id="5_va7x3"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_elkt3")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(575, 324)

[node name="TextureRect" type="TextureRect" parent="Camera2D"]
offset_left = 185.0
offset_top = -186.0
offset_right = 761.0
offset_bottom = 138.0
rotation = -0.418211
scale = Vector2(0.526938, 0.526938)
texture = ExtResource("2_j4jo2")

[node name="TextureRect2" type="TextureRect" parent="Camera2D"]
offset_left = -497.0
offset_top = -215.0
offset_right = 79.0
offset_bottom = 109.0
rotation = 0.250891
scale = Vector2(0.526938, 0.526938)
texture = ExtResource("3_gapmd")

[node name="TextureRect3" type="TextureRect" parent="Camera2D"]
offset_left = 95.0
offset_top = 78.0
offset_right = 1023.0
offset_bottom = 871.0
rotation = -0.0769187
scale = Vector2(0.268148, 0.268148)
texture = ExtResource("4_npdpw")

[node name="Sprite2D" type="Sprite2D" parent="Camera2D"]
position = Vector2(-158, 170)
rotation = -0.288835
scale = Vector2(0.161245, 0.161245)
texture = ExtResource("5_va7x3")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 2
offset_left = 441.0
offset_top = 209.0
offset_right = 651.0
offset_bottom = 275.0
scale = Vector2(1.58603, 1.29127)
text = "Timing Tomfoolery
"
fit_content = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 472.0
offset_top = 257.0
offset_right = 561.0
offset_bottom = 443.0
scale = Vector2(1.70308, 1.35148)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Customize" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Customize"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Customize" to="." method="_on_customize_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
